--- a/spec/integration/test_project/Gemfile
+++ b/spec/integration/test_project/Gemfile
@@ -5,7 +5,7 @@ gem 'paint'
 group :development do
   gem 'jara', path: '../../..'
   gem 'jruby-jars', '= 1.7.11'
-  gem 'puck'
+  gem 'puck', platform: 'jruby'
   gem 'rake'
   gem 'pry'
 end
