--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,9 @@ language: ruby
 sudo: false
 cache: bundler
 rvm:
-  - jruby
-  - jruby-head
-  - 2.2.0
-matrix:
-  allow_failures:
-    - rvm: jruby-head
+  - jruby-1.7.19
+  - jruby-9.1.13.0
+  - 2.3.3
 before_script:
   - git config --global user.email "doe@example.com"
   - git config --global user.name "J. Doe"
